--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
   <title>Online store</title>
 </head>
 <body>
-<h1>Hello</h1>
+  <p class="my-5">
+    Bender, quit destroying the universe! Yeah, I do that with my stupidness. I never loved you. Moving along…
+    Belligerent and numerous.
+  </p>
+  <h1 class="text-2xl font-bold mt-8 mb-5">Заголовок</h1>
+  <button class="text-white font-bold bg-red-600 hover:bg-purple-800 py-2 px-4 rounded">
+    Party with Slurm!
+  </button>
 </body>
 </html>
