--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,7 @@
   <title>Online store</title>
 </head>
 <body>
-  <p class="my-5">
-    Bender, quit destroying the universe! Yeah, I do that with my stupidness. I never loved you. Moving along…
-    Belligerent and numerous.
-  </p>
-  <h1 class="text-2xl font-bold mt-8 mb-5">Заголовок</h1>
-  <button class="text-white font-bold bg-red-600 hover:bg-purple-800 py-2 px-4 rounded">
+  <button class="m-2 p-3 border-emerald-800 rounded-xl hover:bg-amber-300 border">
     Party with Slurm!
   </button>
 </body>
