--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
   <button class="m-2 p-3 border-emerald-800 rounded-xl hover:bg-amber-300 border">
     Party with Slurm!
   </button>
+  <button class="btn">
+    Party with Slurm!2
+  </button>
 </body>
 </html>
