feat: complete project settings
* feat: add prettier-plugin-tailwindcss

* feat: set tailwind for component and remove sass

* fix: format css files

* feat: add btn component example

* feat: add custom color 'primary'

* feat: change default animation duration to 400ms

* feat: add dotenv plugin

* feat: add parse

* feat: add test method for data base

* fix: fix formatting and type any

* fix: add extensions for eslint

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,8 @@
   <title>Online store</title>
 </head>
 <body>
-  <p class="my-5">
-    Bender, quit destroying the universe! Yeah, I do that with my stupidness. I never loved you. Moving along…
-    Belligerent and numerous.
-  </p>
-  <h1 class="text-2xl font-bold mt-8 mb-5">Заголовок</h1>
-  <button class="text-white font-bold bg-red-600 hover:bg-purple-800 py-2 px-4 rounded">
-    Party with Slurm!
+  <button class="btn">
+    Party with Slurm!2
   </button>
 </body>
 </html>
