--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online store</title>
 </head>
 <body>
-  <p class="my-5">
-    Bender, quit destroying the universe! Yeah, I do that with my stupidness. I never loved you. Moving along…
-    Belligerent and numerous.
-  </p>
-  <h1 class="text-2xl font-bold mt-8 mb-5">Заголовок</h1>
-  <button class="text-white font-bold bg-red-600 hover:bg-purple-800 py-2 px-4 rounded">
-    Party with Slurm!
-  </button>
+  <header class="header">
+    <div class="header__top">
+      <div class="header__top-wrapper wrapper">
+        <div class="header__top-sex">
+          <a class="header__top-sex-woman active">Women</a>
+          <a class="header__top-sex-man">Men</a>
+        </div>
+        <div class="header__top-logo">
+          <img src="./assets/images/logo.svg" alt="Logo">
+        </div>
+        <div class="header__top-buttons">
+          <a class="header__top-button header__top-button--search">
+            <svg class="w-[30px] block m-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+            </svg>          
+          </a>
+          <a class="header__top-button header__top-button--favorites">
+            <svg class="w-[30px] block m-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+            </svg>
+          </a>
+          <a class="header__top-button header__top-button--cart">
+            <svg class="w-[30px] block m-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+            </svg>          
+          </a>
+          <a class="header__top-button header__top-button--profile">
+            <svg class="w-[30px] m-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+            </svg>          
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="header__bottom">
+      <nav class="header__bottom-navigation wrapper">
+        <ul class="header__bottom-navigation-list">
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Sale</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">New</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Clothes</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Shoes</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Presents</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Accessors</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Cosmetics</a>
+          </li>
+          <li class="header__bottom-navigation-item">
+            <a class="header__bottom-navigation-item-link">Brands</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
