refactor: change conflicts with master

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online store</title>
 </head>
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen p-0">
   <header class="mb-5">
     <div class="w-full border-b-2 border-gray-300 h-[65px] box-border">
       <div class="flex justify-between items-center max-w-[1200px] h-[65px] mx-auto my-0 box-border">
