--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Online store</title>
 </head>
-<body class="p-0">
+<body>
   <div id="app"></div>
 </body>
 </html>
