--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
   <title>Online store</title>
 </head>
 <body>
-  <button class="btn">
-    Party with Slurm!2
-  </button>
+  <div id="app"></div>
 </body>
 </html>
